@@ -1666,6 +1666,15 @@ larger than the character.  The corpse must be emptied of any equipment before d
 so, and the corpses of other players may be restricted.
  
 
+SKILL_DIARY=DIARY
+DIARY=<ABILITY>\
+Usage    : DIARY [TARGET BOOK] [PERIOD] [ENTRY] ... \n\r\
+Example  : diary book week xp\n\r\
+Allows the player to keep a diary of the experiences they witness.  Each page in the \
+target book will contain all entries for the given period (hour, day, week, month, season, \
+or year).  The types of entries that can be written down are limited at first, but increase \
+with expertise. 
+
 THIEF_DIGSITE=DIGSITE
 DIGSITE=<ABILITY>\
 Usage    : DIGSITE\n\r\
