@@ -2,6 +2,7 @@
   *  DATABASE CHANGED! (new CBCDAT table)
   1. New Generic Commands!, see GameBuildersGuide for more information.
   2. BodyPiercing is now recipe driven, and recipes are now split off by level.
+  3. New Skill: Diary
   
 # Build 5.10.4 Release 12/05/2024
   *  DATABASE CHANGED! (Bitmap field in CMCHAR table is now larger)
